--- a/views/articles.jade
+++ b/views/articles.jade
@@ -1,18 +1,19 @@
 extends layout
 
 block content
-  .page-header
-    h2
-      i.fa.fa-hacker-news(style='color: #ff6600')
-      | Articles
-        h3 Hacker News Frontpage
-          table.table.table-condensed
-            thead
-              tr
-                  th №
-                  th Title
-              tbody
-                each link, index in links
-                  tr
-                    td= index + 1
-                    td!= link
+  table.table.table-condensed
+    thead
+      tr
+        th №
+        th Title
+    tbody
+      each link, index in links
+        tr
+          td= index + 1
+          td!= link
+            a.btn.btn-primary(href='http://cheeriojs.github.io/cheerio/', target='_blank')
+              i.fa.fa-info
+                | Cheerio Docs
+            a.btn.btn-primary(href='http://vimeo.com/31950192', target='_blank')
+              i.fa.fa-film
+                | Cheerio Screencast
