--- a/views/articles.jade
+++ b/views/articles.jade
@@ -11,9 +11,9 @@ block content
         tr
           td= index + 1
           td!= link
-            a.btn.btn-primary(href='http://cheeriojs.github.io/cheerio/', target='_blank')
+            a.btn.btn-success(href='http://cheeriojs.github.io/cheerio/', target='_blank')
               i.fa.fa-info
-                | Cheerio Docs
-            a.btn.btn-primary(href='http://vimeo.com/31950192', target='_blank')
+                |     Comment
+            a.btn.btn-danger(href='http://vimeo.com/31950192', target='_blank')
               i.fa.fa-film
-                | Cheerio Screencast
+                |     Save Article
