--- a/public/css/main.css
+++ b/public/css/main.css
@@ -11,6 +11,7 @@ html {
   -webkit-text-size-adjust: 100%; }
 
 body {
+  background-image: url("../flakes.png") no-repeat left top;
   margin: 0; }
 
 article,
