--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,9 +8,10 @@ html
     meta(name='csrf-token', content=_csrf)
     title #{title} - DonScraper
     link(rel='shortcut icon', href='/favicon.png')
-    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css')
-    link(rel='stylesheet', href='https://bootswatch.com/4/lux/bootstrap.min.css')
-    link(rel='stylesheet', href='/css/main.css')
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
+    link(rel='stylesheet', href='https://bootswatch.com/3/journal/bootstrap.min.css')
+    link(rel='stylesheet', href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css")
+    link(rel='stylesheet', href="/css/main.css")
 
   body
     include partials/header
@@ -22,7 +23,6 @@ html
     include partials/footer
 
     script(src='https://code.jquery.com/jquery-3.2.1.slim.min.js')
-    script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js')
-    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js')
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js')
     script(src='/js/main.js')
 
