--- a/views/partials/header.jade
+++ b/views/partials/header.jade
@@ -7,8 +7,8 @@
         span.icon-bar
         span.icon-bar
       a.navbar-brand(href='/')
-        i.fa.fa-cube
-        | DonScraper
+        i.fa.fa-briefcase
+        |      DonScraper
     .collapse.navbar-collapse
       ul.nav.navbar-nav
         li(class=(title == 'Home') ? 'active' : undefined)
