--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,7 +11,7 @@ html
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
     link(rel='stylesheet', href='https://bootswatch.com/3/journal/bootstrap.min.css')
     link(rel='stylesheet', href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css")
-    link(rel='stylesheet', href="/css/main.css")
+    link(rel='stylesheet', href="/css/styles.css")
 
   body
     include partials/header
