--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: url('/img/11.png') no-repeat left top;
+    background: url('/img/11.png') repeat left top;
     padding-top: 41px;
 }
 
